# QtMarket

./: .gitignore  CMakeLists.txt  README.md  mydb.db
include/: Cart.h  ConstIterator.h  Iterator.h  Product.h  ProductListManager.h  Storage.h
include/entity/: Admin.h  Buyer.h  Seller.h  User.h
include/ui/: addproduct.h  buyermenu.h  buyerorders.h  cartitemwidget.h  cartmenu.h  mainwindow.h  productitemwidget.h  registerseller.h  registerwindow.h  sellermenu.h  sellerorder.h
resources/: Res.qrc
source/: Product.cpp  Storage.cpp  main.cpp
source/auth/: BuyerAuth.cpp  BuyerAuth.h  SellerAuth.cpp  SellerAuth.h  SessionManager.cpp  SessionManager.h
source/database/: CartDatabase.h  DatabaseLoader.cpp  DatabaseLoader.h
source/entity/: Admin.cpp  Buyer.cpp  Seller.cpp  User.cpp
source/exception/: Exceptions.cpp  Exceptions.h
source/management/: CartManagement.cpp  CartManagement.h  ProductManagement.cpp  ProductManagement.h
source/manager/: ErrorManager.cpp  ErrorManager.h
source/menu/: addproduct.cpp  addproduct.ui  buyermenu.cpp  buyermenu.ui  buyerorders.cpp  buyerorders.ui  cartitemwidget.cpp  cartitemwidget.ui  cartmenu.cpp  cartmenu.ui  mainwindow.cpp  mainwindow.ui  orderitemwidget.cpp  orderitemwidget.h  orderitemwidget.ui  productitemwidget.cpp  productitemwidget.ui  registerseller.cpp  registerseller.ui  registerwindow.cpp  registerwindow.ui  sellermenu.cpp  sellermenu.ui  sellerorder.cpp  sellerorder.ui
source/report/: reportpage.cpp  reportpage.h  reportpage.ui
